# risc-zero

./: .gitignore  Cargo.toml  README.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/holder-cli/: Cargo.toml
crates/holder-cli/src/: main.rs
crates/issuer-cli/: Cargo.toml
crates/issuer-cli/src/: main.rs
crates/vdr-local/: Cargo.toml
crates/vdr-local/src/: lib.rs
crates/verifier-cli/: Cargo.toml
crates/verifier-cli/src/: main.rs
risc0/host/: Cargo.toml
risc0/host/src/: lib.rs
risc0/methods/: Cargo.toml
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
risc0/methods/src/: lib.rs
