[package]
name = "risc0-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
risc0-zkvm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

common = { path = "../../crates/common" }
risc0-methods = { path = "../methods" }
